==================== 2.19.3 ====================

2007-05-21  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: add X_LIBS to link flags.
	Patch by Loïc Minier <lool@dooz.org>
	Fix bug #409557

==================== 2.19.2 ====================

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install data in $(datadir)/gnome-panel/ instead of
	$(datadir)/gnome/panel/
	Fix bug #436461

==================== 2.18.1 ====================

==================== 2.18.0 ====================

==================== 2.17.92 ====================

==================== 2.17.91 ====================

==================== 2.17.90 ====================

2007-01-15  Vincent Untz  <vuntz@gnome.org>

	* panel-applet.c: (panel_applet_position_menu): correctly position
	menu in RTL environments
	Fix bug #396386

2007-01-15  Vincent Untz  <vuntz@gnome.org>

	* panel-test-applets.glade: do not hardcode invisible_char in glade
	files
	Fix bug #393901, patch by Vitaliy Ischenko <betalb@gmail.com>

==================== 2.16.2 ====================

==================== 2.16.1 ====================

==================== 2.16.0 ====================

2006-08-12  Vincent Untz  <vuntz@gnome.org>

	* panel-applet.c: use G_DEFINE_TYPE
	(panel_applet_associate_schemas_in_dir): updated for parent_class
	renaming
	(panel_applet_size_request): ditto
	(panel_applet_size_allocate): ditto
	(panel_applet_expose): ditto
	(panel_applet_focus): ditto
	(panel_applet_realize): ditto
	(panel_applet_constructor): new, to automatically call
	panel_applet_setup()
	(panel_applet_class_init): set the constructor
	(panel_applet_init): renamed from panel_applet_instance_init()
	(panel_applet_get_type): killed
	(panel_applet_setup): no need to call panel_applet_setup()
	(panel_applet_factory_callback): ditto
	Should fix bug #150122

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* panel-applet.h: use GOption for the applets

==================== 2.15.91 ====================
