@@ -1,3 +1,8 @@
+2007-06-14  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-applet.c: (panel_applet_focus): small cleanup
+	* test-bonobo-applet.c: (test_applet_fill): migrate to GtkTooltip
+
 ==================== 2.19.3 ====================
 
 2007-05-21  Vincent Untz  <vuntz@gnome.org>
